# reporters-db

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  make_csv.py  pyproject.toml  reporters.csv  reporters.json  requirements.dev.txt  requirements.txt  setup.py  state_abbreviations.json  tests.py  tox.ini  travis.yml  utils.py
.github/: dependabot.yml  funding.yml
.github/workflows/: check_changelog.yml  eyecite.yml  lint.yml  pypi.yml  semgrep.yml  tests.yml
113/results/: original.json  report.md  update.json
114/results/: original.json  report.md  update.json
120/results/: original.json  output.csv  report.md  update.json
122/results/: original.json  report.md  update.json
124/results/: original.json  report.md  update.json
126/results/: original.json  report.md  update.json
127/results/: original.json  output.csv  report.md  update.json
128/results/: original.json  output.csv  report.md  update.json
129/results/: original.json  output.csv  report.md  update.json
131/results/: original.json  output.csv  report.md  update.json
132/results/: original.json  output.csv  report.md  update.json
133/results/: original.json  report.md  update.json
135/results/: original.json  report.md  update.json
136/results/: original.json  report.md  update.json
137/results/: original.json  report.md  update.json
138/results/: original.json  report.md  update.json
139/results/: original.json  report.md  update.json
141/results/: original.json  report.md  update.json
143/results/: original.json  report.md  update.json
147/results/: original.json  report.md  update.json
148/results/: original.json  report.md  update.json
149/results/: original.json  report.md  update.json
150/results/: original.json  report.md  update.json
151/results/: original.json  report.md  update.json
152/results/: original.json  report.md  update.json
153/results/: original.json  report.md  update.json
156/results/: original.json  report.md  update.json
158/results/: original.json  report.md  update.json
159/results/: original.json  report.md  update.json
160/results/: original.json  report.md  update.json
reporters-db/: __init__.py
reporters_db/: __init__.py  format_json.py  make_csv.py  utils.py
schemas/: journals.json  laws.json  regexes.json  reporters.json
(+173 files in other folders)
